[gd_scene load_steps=4 format=3 uid="uid://n51fyipra4t6"]

[ext_resource type="Theme" uid="uid://du2pqa4sphe8i" path="res://Resources/Themes/StandardTheme.tres" id="1_hi1ao"]
[ext_resource type="Script" path="res://Components/ArtPromptGenerator/art_prompt_generator.gd" id="1_vmnqj"]
[ext_resource type="PackedScene" uid="uid://djevfhk7g786q" path="res://Components/Menu/menu.tscn" id="3_ybkpr"]

[node name="art_prompt_generator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hi1ao")
script = ExtResource("1_vmnqj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0941176, 0.0941176, 1)

[node name="Menu" parent="." instance=ExtResource("3_ybkpr")]
layout_mode = 1

[node name="GeneratorContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -115.5
offset_right = 131.0
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 69
alignment = 1

[node name="PromptNew" type="Label" parent="GeneratorContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "PromptNew"
horizontal_alignment = 1

[node name="PromptOldBox" type="VBoxContainer" parent="GeneratorContainer"]
layout_mode = 2
alignment = 1

[node name="PromptOld1" type="Label" parent="GeneratorContainer/PromptOldBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.811765)
theme_override_font_sizes/font_size = 25
text = "PromptOld1"
horizontal_alignment = 1

[node name="PromptOld2" type="Label" parent="GeneratorContainer/PromptOldBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.435294)
theme_override_font_sizes/font_size = 25
text = "PromptOld2"
horizontal_alignment = 1

[node name="PromptOld3" type="Label" parent="GeneratorContainer/PromptOldBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.2)
theme_override_font_sizes/font_size = 25
text = "PromptOld3"
horizontal_alignment = 1

[node name="Button" type="Button" parent="GeneratorContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "New Prompt"

[connection signal="button_up" from="GeneratorContainer/Button" to="." method="_on_button_button_up"]
